--- a/achemso-demo.tex
+++ b/achemso-demo.tex
@@ -361,9 +361,11 @@ use channel counter 0 to trigger the camera.
      \item waveform chart: Displays the generated DC voltage at the DAQ output.
 \end{itemize}
 
-Part I will stop and part two of the program starts as soon as we press a Boolean switch displayed on the front panel. Part II is programmed to capture the images and generate a DC voltage signal. We use the channel 'analog output 0' (AO 0) of the DAQ to generate the voltage. 
-
-The block diagram corresponding to this front panel is shown in \ref{fig:ex4} \ref{fig:ex5}. The block diagram is divided into Block I and Block II. Block I corresponds to part I, and block II corresponds to part II of the front panel. Each block is included in a sequence structure that helps execute the blocks sequentially. 
+Part I will stop and part II of the program starts as soon as we press a Boolean switch displayed on the front panel. Part II is programmed to capture the images and generate a DC voltage signal. We use the channel 'analog output 0' (AO 0) of the DAQ to generate the voltage. 
+The block diagram corresponding to this front panel is shown in \ref{fig:ex4} (block I) and \ref{fig:ex5} (block II). 
+%The block diagram is divided into Block I and Block II. Block I corresponds to part I, and block II corresponds to part II of the front panel. 
+Each block is included in a sequence structure that helps to execute the blocks sequentially.
+ 
 The following modules from the LabVIEW library are used:
 \begin{itemize}
 	\item IMAQdx open camera VI : This VI opens the camera, checking its capabilities, loading the camera configuration file, and creating a distinct reference to the camera. 
@@ -375,10 +377,14 @@ The following modules from the LabVIEW library are used:
 	\item IMAQdx Grab VI : Captures the images and then passes the images to IMAQ Cast image VI.
 	\item IMAQ Cast image VI : convert these RGB frames to grayscale since this reduces the data size.
 	\item The IMAQ write file2 VI : Writes the images from IMAQ Caste Image VI to a file in the selected format (png/jpg/bmp/tiff etc.) 
+	\item DAQ Assistant Express VI : Generate a DC Voltage at the Analog output 0 (AO 0)
 \end{itemize}
-Each image from IMAQ Caste Image VI needs to be written and stored in a folder inside the computer to collect raw image data.  The iteration terminal of the while loop gives the sequential names for images. Each iteration number is converted to a string and concatenated with the file extension and folder path where we need to store images. The String to Path function converts these concatenated strings to a path and is connected to the file path terminal of the 'IMAQ Write file 2 VI'. This connection commands the 'IMAQ Write file 2 VI' to store the images in the mentioned folder with the specified file extension. The While loop helps to run the code continuously. Block II executes as soon as we press the Boolean switch on the front panel. When the ‘switch’ is ON, the case selector terminal of both
-‘case structures’ on the block diagram changes to TRUE and corresponding codes execute simultaneously. Code in ‘case structure I’ is for signal generation, and code in case structure II is for image acquisition. "DAQ Assistant Express VI' on the ‘case structure I’
-generate a DC Voltage at the Analog output 0 (AO 0). Image acquisition code on 'case structure II' is the same as in block I, but images will be stored in a different folder, and it will stop in the presence of an error or manually pressing a Boolean stop button.
+%Each image from IMAQ Caste Image VI needs to be written and stored in a folder inside the computer to collect raw image data.  The iteration terminal of the while loop gives the sequential names for images. Each iteration number is converted to a string and concatenated with the file extension and folder path where we need to store images. The String to Path function converts these concatenated strings to a path and is connected to the file path terminal of the 'IMAQ Write file 2 VI'. This connection commands the 'IMAQ Write file 2 VI' to store the images in the mentioned folder with the specified file extension. The While loop helps to run the code continuously. 
+
+%Block II executes as soon as we press the Boolean switch on the front panel. 
+
+%When the ‘switch’ is ON, the case selector terminal of both ‘case structures’ on the block diagram changes to TRUE and corresponding codes execute simultaneously. Code in ‘case structure I’ is for signal generation, and code in case structure II is for image acquisition. "DAQ Assistant Express VI' on the ‘case structure I’ generate a DC Voltage at the Analog output 0 (AO 0). Image acquisition code on 'case structure II' is the same as in block I, but images will be stored in a different folder, and it will stop in the presence of an error or manually pressing a Boolean stop button.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.3\linewidth,angle=90 ]{Block_1.png}
@@ -400,14 +406,7 @@ generate a DC Voltage at the Analog output 0 (AO 0). Image acquisition code on '
 
 \subsubsection{DC Voltage Signal generation}
 \subsubsection{Electronic Circuit for voltage and current amplification}
-The NI USB DAQ 6343 generates a DC voltage with user-defined
-amplitude ($\leq$15V). The output from the non-inverting amplifier is fed to an
-NPN power transistor (2N6487) capable of handling enough current
-inside the solution. The output from the power transistor is applied
-to the chemical solution. We can attain a maximum of + 15 V at the
-output using these electronic setups. The electric field, E, can be
-varied by using the relation: E= Applied Voltage/distance between
-electrodes
+The NI USB DAQ 6343 generates a DC voltage with user-defined amplitude ($\leq$15V). The output from the non-inverting amplifier is fed to an NPN power transistor (2N6487) capable of handling current (1A) inside the solution. The output from the power transistor is applied to the chemical solution. We can attain a maximum of + 15 V at the output using these electronic setups. The electric field, E, can be varied by using the relation: E= Applied Voltage/distance between electrodes.
 
 \begin{figure}[H]
     \centering
@@ -438,7 +437,7 @@ included to compensate for the input signal fluctuations when we deal
 with low-frequency signals. This error amplifier always tries to make
 the input and output the same. Identical circuits are required for
 each sine wave signal. Signals are applied onto the solution through
-copper electrodes as shown in Figure \ref{fig:ex6}.
+copper electrodes as shown in \ref{fig:ex6}.
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{CPEF - Copy.jpg}
@@ -446,19 +445,23 @@ copper electrodes as shown in Figure \ref{fig:ex6}.
       pair of AC voltage signal applications in the BZ reaction.}
     \label{fig:ex6}
 \end{figure}
-\subsubsection{Front Panel}
+%\subsubsection{Front Panel}
 The front panel is divided into part I and part II. Part I is
 programmed to capture the images with no applied voltage.  Part II is
 programmed to capture the images and generate two AC voltage signals
 (sine wave or cosine wave). Both parts are the same, as explained
-earlier, except for voltage signal generation. Physical channels on
-the front panel describe the analog output channels (AO 0 and AO 1) of
-the DAQ, which generate two AC voltage signals. Sampling info displays
-the sampling frequency (Fs) and the number of samples (\#) of the
-voltage signals. Control knobs on the front panel are used to set the
-amplitude of the signals. The frequency and phase of the signals can
-be varied by using the corresponding numeric control buttons. The
-waveform chart displays the generated voltage signals at the output.
+earlier, except for voltage signal generation. 
+
+The front panel contains following new icons:
+\begin{itemize}
+	\item Physical channels : Describe the analog output channels (AO 0 and AO 1) of the DAQ, which generate two AC voltage signals.
+	\item Sampling info: Shows the sampling frequency (Fs) and the number of samples (\#) of the voltage signals.
+	\item Amplitude Control Knobs: Used to set the amplitude of the voltage signals.
+	\item Frequency : Sets the frequency of the signals.
+	\item Phase: Sets the phase of the signals.
+	\item The waveform chart: Displays the generated voltage signals at the DAQ output.	
+\end{itemize}
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=\linewidth]{polarised.png}
@@ -469,43 +472,38 @@ waveform chart displays the generated voltage signals at the output.
       voltage generation}
     \label{fig:ex7}
 \end{figure}
-\subsubsection{Block Diagram}
-Figure \ref{fig:ex8} and Figure \ref{fig:ex9} show the block diagram
-for image acquisition and two AC voltage generation. The block diagram
-is divided into two blocks. Block I correspond to part I, and block II
-corresponds to part II of the front panel. Each block is included in a
-sequence structure that helps to execute the blocks sequentially. The
-code in Block I is the same as explained earlier. Block II executes as
+%\subsubsection{Block Diagram}
+The corresponding block diagram is divided into BLOCK I and Block II. Block I is same as we explained as in \ref{fig:ex4}.  \ref{fig:ex9} show the block diagram (BLOCK II) for image acquisition and two AC voltage generation.  Each block is included in a
+sequence structure that helps to execute the blocks sequentially. Block II executes as
 soon as we press the Boolean switch on the front panel. When the
 ‘switch’ is ON, the case selector terminal of both ‘case structures’
 on the block diagram changes to TRUE and corresponding codes execute
-simultaneously. Code in ‘case structure I’ is for two AC voltage
-signal generation and code in ‘case structure II’ is for image
-acquisition. The image acquisition code on ‘case structure II’ is the
-same as in block I, but images will be stored in a different
-folder. The ‘DAQmx Create Virtual Channel (VI)’ creates two different
-output ports (AO 0 \& AO 1) of DAQ Device 6343 to generate two voltage
-signals with user-defined features. The ‘DAQmx timing VI’ Sets the
-source of the sample clock, the rate of the Sample Clock, and the
-number of samples to generate. The ‘Sine waveform VIs’ creates two
-sine waves with user-specified amplitude, frequency, phase, and
-sampling info. The sampling info from the ‘sine waveform VI’ is
-directly fed to ‘DAQmx timing VI'. The waveforms are connected to
-‘DAQmx Write VI’ to write them.  This connection commands the DAQ
-Device to generate signals with the above-mentioned
-features. Generated signal can be visually observed in the waveform
-chart displayed on the front panel. The ‘DAQmx Start Task VI’ starts
-the signal generation task, and ‘DAQmx is task done VI’ on the while
-loop checks whether the signal generation task is completed in each
-iteration. The ‘DAQmx Clear Task VI’ clears the task to reduce memory
-after each iteration. The 'while loops' on the block diagram ensure
-the continuous execution of the code. The ‘Error handler’ displays
-error messages on the front panel, if any. This code is used to
-achieve different polarised electric fields (linearly polarised,
-circularly polarised, and elliptically polarised) if we apply these
-signals to the chemical solution in four electrode combinations by
-changing the phase of the signals by keeping the same amplitude and
-frequency.
+simultaneously. 
+Block diagram contains the following modules from the LabVIEW library: 
+\begin{itemize}
+	\item DAQmx Create Virtual Channel (VI): Creates two different
+	output ports (AO 0 \& AO 1) of DAQ Device 6343 to generate two voltage
+	signals with user-defined features.
+	\item DAQmx timing VI: Sets the source of the sample clock, the rate of the Sample Clock, and the number of samples to generate.
+	\item Sine waveform VIs: Creates two sine waves with user-specified amplitude,frequency, phase, and sampling info.
+	\item DAQmx Write VI: Writes the waveforms.
+	\item DAQmx Start Task VI: Starts the signal generation task.
+	\item DAQmx is task done VI: Checks whether the signal generation task is completed in each iteration. 
+	\item DAQmx Clear Task VI: clears the task to reduce memory after each iteration.
+	\item Error handler VI: displays error messages on the front panel, if any.
+\end{itemize}
+%Code in ‘case structure I’ is for two AC voltage signal generation and code in ‘case structure II’ is for image acquisition. The image acquisition code on ‘case structure II’ is the same as in block I, but images will be stored in a differentfolder. 
+%The sampling info from the ‘sine waveform VI’ is directly fed to ‘DAQmx timing VI'. The waveforms are connected to ‘DAQmx Write VI’ to write them.  This connection commands the DAQ Device to generate signals with the above-mentioned features. Generated signal can be visually observed in the waveformchart displayed on the front panel. The ‘DAQmx Start Task VI’ starts the signal generation task, and ‘DAQmx is task done VI’ on the while loop checks whether the signal generation task is completed in eachiteration.  The ‘DAQmx Clear Task VI’ clears the task to reduce memory after each iteration. The 'while loops' on the block diagram ensure the continuous execution of the code. The ‘Error handler’ displays error messages on the front panel, if any. 
+
+This code is used to achieve different polarised electric fields (linearly polarised,
+circularly polarised, and elliptically polarised) if we apply these signals to the chemical solution in four electrode combinations by changing the phase of the signals by keeping the same amplitude and frequency.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\linewidth, angle=90]{polarised_block_2.png}
+	\caption{Block diagram of the image acquisition and a pair of AC voltage generation. Block II
+		captures and saves the images after AC voltage generation}
+	\label{fig:ex9}
+\end{figure}
 \section{Conclusions} 
 The BZ reaction is a model system for studying chemical and
 biological oscillations and provides a platform for exploring the
